# patient-diet-recorder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-deploy.yml  unit-test.yml
backend/: constants.py  db.py  limits.json  main.py  sign_up_monitor.py  test_api.py  test_db.py  validator.py
blog/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  license.md
docs/blog/: .authors.yml
getting-started/: index.html
javascripts/: mathjax.js
license/: index.html
monitor/: events.json  index.html  manifest.json  script.js  styles.css
patient/: events.json  index.html  lang_texts.json  manifest.json  script.js  styles.css
search/: search_index.json
