[tool.poetry]
name = "patient-intake-output-recorder"
version = "1.2.0"
description = ""
authors = ["lifeadventurer <life0adventurer@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.115.12"
pydantic = "^2.11.1"
requests = "^2.32.3"
mkdocs-material = "^9.5.42"
mkdocs-glightbox = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.6.1"
httpx = "^0.28.1"     # fastapi testclient required
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
